--- a/Css/cssweather.css
+++ b/Css/cssweather.css
@@ -34,6 +34,8 @@ body {
   justify-content: space-around;*/
   color: white;
   font-size: 20px;
+  margin-left: 10px;
+  top: 0px;
 }
 
 @media only screen and (orientation: portrait) {
@@ -142,6 +144,7 @@ body {
   }
 
   .searchCity {
+    width: 85%;
     padding: 5px;
     display: flex;
     /*align-items: center;*/
@@ -185,7 +188,6 @@ body {
   }
 
   .detail {
-
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -232,9 +234,9 @@ body {
 
 @media only screen and (orientation: landscape) {
 
-  .contenedor {
+    .contenedor {
     margin-top: 50px;
-    border: 5px solid yellow;
+    margin-bottom: 35px;
   }
 
   .actualCity {
@@ -244,12 +246,11 @@ body {
     top: 0;
     /*Position the navbar at the top of the page*/
     width: 100%;
-    border: 5px dashed red;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    align-items: center;
-    height: 10%;
+    align-items: flex-end;
+    height: 8%;
     color: aliceblue;
     background-color: #0E6248;
   }
@@ -261,20 +262,22 @@ body {
 
   }
   .severalCity > div {
-    border: 2px dashed red;
+    border-radius: 3px;
+    margin: 0.5px;
     padding: 5px;
     display: flex;
     align-items: center;
   }
   .icon {
-    width: 50%;
+    width: 25%;
   }
   .icon2 {
-    width: 90%;
+    width: 50%;
   }
   .cityName {
     background: #EFFFAD;
     width: 60%;
+    justify-content: center;
   }
   .cityName h3 {
     margin: 1px;
@@ -284,8 +287,9 @@ body {
   }
 
   .detalleCity {
+    background: #D9E687;
     width: 40%;
-    justify-content: flex-end;
+    justify-content: center;
   }
   .detalleCity h3 {
     margin: 1px;
@@ -294,14 +298,17 @@ body {
     font-weight: bold;
   }
 
-  .selectedCity {
-    height: 240px;
+  #mainSelectedCity {
     display: none;
+  }
+  .selectedCity {
+    background: #D9E687;
+    height: 205px;
+    display: flex;
     justify-content: space-around;
 
   }
   .selectedCity > div {
-    border: 2px dashed red;
     width: 50%;
     padding: 10px;
     display: flex;
@@ -331,28 +338,28 @@ body {
   }
 
   .searchCity {
-    border: 3px solid red;
+    width: 85%;
     padding: 5px;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    /*align-items: center;*/
+    justify-content: flex-end;
   }
   .searchBar {
     background: #EFFFAD;
     padding-left: 10px;
-    height: 30px;
-    width: 70%;
+    height: 35px;
+    width: 88%;
     color: rgba(138, 155, 67, 0.81);
     font-size: 17px;
     font-weight: bold;
     border-radius: 20px 0px 0px 20px;
-    box-shadow: 20px 5px 13px #888888;
+    /*box-shadow: 20px 5px 13px #888888;*/
   }
   .myBtn {
     margin: 0px;
     top: 0px;
     background: #EFFFAD;
-    height: 30px;
+    height: 35px;
     width: 12%;
     color: rgba(138, 155, 67, 0.81);
     font-size: 15px;
@@ -361,7 +368,8 @@ body {
   }
 
   .scrollingwrapper {
-    border-bottom: 1px solid rgba(240, 248, 255, 0.44);
+    background: #EFFFAD;
+    margin: 1px;
     overflow-x: scroll;
     overflow-y: hidden;
     white-space: nowrap;
@@ -370,13 +378,13 @@ body {
   .temp {
     display: inline-block;
     width: 16%;
+    padding: 5px;
   }
 
   .detail {
-
     display: flex;
     flex-direction: column;
-    text-align: center;
+    align-items: center;
   }
   .detail h5 {
     color: rgba(138, 155, 67, 0.81);
@@ -384,16 +392,18 @@ body {
     margin: 4px;
   }
   .iconDetail {
-    width: 90%;
+    width: 50%;
   }
 
   .filterByDay {
+    margin: 1px;
+    background: #D9E687;
     display: flex;
     justify-content: center;
   }
   .detalleDay {
-    padding-left: 10px;
-    border-bottom: 1px solid rgba(240, 248, 255, 0.44);
+    padding-left: 30px;
+    /*border-bottom: 1px solid rgba(240, 248, 255, 0.44);*/
     display: flex;
     align-items: center;
     flex: 2;
@@ -406,7 +416,7 @@ body {
   }
   .detalleDay2 {
     padding-right: 10px;
-    border-bottom: 1px solid rgba(240, 248, 255, 0.44);
+    /*border-bottom: 1px solid rgba(240, 248, 255, 0.44);*/
     display: flex;
     align-items: center;
     justify-content: space-around;
